Ajuste do auth